objects/smagicinteract__Action__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Action_To_Perform__c</fullName>
        <label>Action To Perform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ConvertLead</fullName>
                    <isActive>false</isActive>
                    <label>ConvertLead</label>
                </value>
                <value>
                    <fullName>Convert Lead</fullName>
                </value>
                <value>
                    <fullName>Create Record</fullName>
                </value>
                <value>
                    <fullName>Edit Record</fullName>
                </value>
                <value>
                    <fullName>OpenUrl</fullName>
                    <isActive>false</isActive>
                    <label>OpenUrl</label>
                </value>
                <value>
                    <fullName>Open Url</fullName>
                </value>
                <value>
                    <fullName>Post To Chatter</fullName>
                </value>
                <value>
                    <fullName>View Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Action_To_Perform__c</columns>
        <columns>smagicinteract__Action_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>